Fix video embed: flush with text column, fix subpixel gap

--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -449,23 +449,17 @@ body::before {
   padding-bottom: 56.25%;
   height: 0;
   overflow: hidden;
-  margin: 1.8rem -3rem;
+  margin: 1.8rem 0;
+  background: #000;
 }
 
 .video-embed iframe {
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+  top: -1px;
+  left: -1px;
+  width: calc(100% + 2px);
+  height: calc(100% + 2px);
   border: 0;
-}
-
-@media (max-width: 750px) {
-  .video-embed {
-    margin-left: 0;
-    margin-right: 0;
-  }
 }
 
 /* ===== Post Footer ===== */
